--- a/app/src/main/res/layout/activity_tabata_timer.xml
+++ b/app/src/main/res/layout/activity_tabata_timer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,14 +13,17 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView"
-        android:layout_marginBottom="80dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:hint="@string/go"
-        android:textSize="40sp"
+        android:layout_marginTop="60dp"
         android:gravity="center"
+        android:hint="@string/go"
         android:textColor="@color/white"
-        />
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -30,36 +33,45 @@
         android:gravity="center"
         android:hint="@string/time"
         android:textColor="@color/white"
-        android:textSize="80sp" />
+        android:textSize="80sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/rounds_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_toStartOf="@id/rounds"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:hint="@string/rounds_left"
-        android:textSize="30sp"
-        android:layout_marginTop="70dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@id/rounds"
         android:gravity="center"
+        android:hint="@string/rounds_left"
         android:textColor="@color/white"
-        />
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/rounds"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/rounds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textSize="30sp"
         android:gravity="center"
         android:hint="@string/rounds_text"
         android:textColor="@color/white"
-        />
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
